[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/ingame_menu.tres" type="Theme" id=1]
[ext_resource path="res://scenes/UI & misc/Dialog_box.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/multiplayer/lobby.gd" type="Script" id=5]
[ext_resource path="res://themes/option+button_Red.tres" type="Theme" id=6]

[sub_resource type="Animation" id=16]
resource_name = "HORIZONTAL_SCREEN"
tracks/0/type = "value"
tracks/0/path = NodePath("ui/ScrollContainer:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 5, 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ui/ScrollContainer:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 111.526, -266.127 ) ]
}

[sub_resource type="Animation" id=26]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ui/ScrollContainer:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ui/ScrollContainer:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 356.312, 23.2817 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "VERTICAL_SCREEN"
tracks/0/type = "value"
tracks/0/path = NodePath("ui/ScrollContainer:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ui/ScrollContainer:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 356.312, 23.2817 ) ]
}

[node name="form" type="Node"]
script = ExtResource( 5 )
DEDICATED_SERVER = true

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 6.0
margin_right = 1272.0
margin_bottom = 543.0
color = Color( 0.478431, 0.454902, 0.454902, 1 )

[node name="ui" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0

[node name="ScrollContainer" type="ScrollContainer" parent="ui"]
margin_left = 356.312
margin_top = 23.2817
margin_right = 522.312
margin_bottom = 303.282
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 1 )
scroll_horizontal_enabled = false

[node name="grid" type="VBoxContainer" parent="ui/ScrollContainer"]
margin_right = 128.0
margin_bottom = 382.0

[node name="text_player" type="LineEdit" parent="ui/ScrollContainer/grid"]
margin_right = 128.0
margin_bottom = 24.0
rect_min_size = Vector2( 128, 0 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "NAME"
caret_blink = true
caret_blink_speed = 0.5

[node name="label_spacer5" type="Label" parent="ui/ScrollContainer/grid"]
margin_top = 28.0
margin_right = 128.0
margin_bottom = 42.0

[node name="input_game" type="OptionButton" parent="ui/ScrollContainer/grid"]
margin_top = 46.0
margin_right = 128.0
margin_bottom = 66.0
theme = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "lan"

[node name="label_spacer4" type="Label" parent="ui/ScrollContainer/grid"]
margin_top = 70.0
margin_right = 128.0
margin_bottom = 84.0

[node name="address_text" type="LineEdit" parent="ui/ScrollContainer/grid"]
margin_top = 88.0
margin_right = 128.0
margin_bottom = 112.0
rect_min_size = Vector2( 128, 0 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "127.0.0.1"
caret_blink = true
caret_blink_speed = 0.5

[node name="label_spacer" type="Label" parent="ui/ScrollContainer/grid"]
margin_top = 116.0
margin_right = 128.0
margin_bottom = 130.0

[node name="play" type="Button" parent="ui/ScrollContainer/grid"]
margin_top = 134.0
margin_right = 128.0
margin_bottom = 202.0
text = "Play!"
flat = true

[node name="label_spacer2" type="Label" parent="ui/ScrollContainer/grid"]
margin_top = 206.0
margin_right = 128.0
margin_bottom = 220.0

[node name="host" type="Button" parent="ui/ScrollContainer/grid"]
margin_top = 224.0
margin_right = 128.0
margin_bottom = 292.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Host"
flat = true

[node name="label_spacer3" type="Label" parent="ui/ScrollContainer/grid"]
margin_top = 296.0
margin_right = 128.0
margin_bottom = 310.0

[node name="back" type="Button" parent="ui/ScrollContainer/grid"]
margin_top = 314.0
margin_right = 128.0
margin_bottom = 382.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "back"
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/HORIZONTAL_SCREEN = SubResource( 16 )
anims/RESET = SubResource( 26 )
anims/VERTICAL_SCREEN = SubResource( 18 )

[node name="Dialog_box" parent="." instance=ExtResource( 4 )]

[connection signal="pressed" from="ui/ScrollContainer/grid/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="ui/ScrollContainer/grid/host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="ui/ScrollContainer/grid/back" to="." method="_on_back_pressed"]
